--- a/src/main/resources/templates/auth/admin.html
+++ b/src/main/resources/templates/auth/admin.html
@@ -43,5 +43,9 @@
   <br>
   <button type="submit">Изменить роль</button>
 </form>
+<!-- Кнопка для перенаправления на начальную страницу -->
+<a href="/">
+  <button type="button">Выход</button>
+</a>
 </body>
 </html>
